--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "semantic-release": "^21.1.1"
+  }
 }
