chore: enable pre-release versions

--- a/src/.goreleaser.yaml
+++ b/src/.goreleaser.yaml
@@ -25,3 +25,6 @@ snapshot:
 changelog:
   use: github-native
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
+
+release:
+  prerelease: auto
